plugins {
    id 'java'
    id 'org.springframework.boot' version '4.0.2'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'berlin.tu'
version = '0.0.1-SNAPSHOT'
description = 'cycling-infrastructure-backend'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-webmvc'
    implementation 'org.hibernate.orm:hibernate-spatial'
    implementation 'com.graphhopper:graphhopper-core:11.0'
    implementation('com.graphhopper:graphhopper-map-matching:11.0')
    implementation("com.fasterxml.jackson.core:jackson-annotations:2.21")
    implementation 'com.fasterxml.jackson.core:jackson-databind'
    implementation 'com.opencsv:opencsv:5.9'
    implementation("org.locationtech.jts.io:jts-io-common:1.20.0")
    implementation 'org.apache.parquet:parquet-hadoop:1.17.1'
    implementation 'com.github.luben:zstd-jni:1.5.7-3'
    implementation 'org.locationtech.proj4j:proj4j:1.4.2'
    implementation 'org.locationtech.proj4j:proj4j-epsg:1.4.2'
    implementation 'org.apache.commons:commons-compress:1.26.2'
    implementation 'org.apache.poi:poi-ooxml:5.2.5'
    runtimeOnly 'org.postgresql:postgresql'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.testcontainers:testcontainers-junit-jupiter:2.0.5'
    testImplementation 'org.testcontainers:testcontainers-postgresql:2.0.5'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()
    jvmArgs '--enable-native-access=ALL-UNNAMED'
}

tasks.named('bootRun') {
    jvmArgs '--enable-native-access=ALL-UNNAMED'
}
